# GacUI-CMake-support

./: .gitignore  .gitmodules  CMakeLists.txt  GacUIConfig.cmake.in  LICENSE  Readme.md
.github/workflows/: build_on_windows.yml
Tutorial/: CMakeLists.txt
Tutorial/Base/: CMakeLists.txt  GetVersionInfo.cpp
Tutorial/GacUI_HelloWorlds/: CMakeLists.txt  HelloWorldsCpp.cpp
cmake/: gitversion.cmake
cmake_export/: CMakeLists.txt  Version.h
cmake_export/complete/: CMakeLists.txt
cmake_export/gac/: CMakeLists.txt
cmake_export/lite/: CMakeLists.txt  Version.cpp
cmake_export/tutorial/: CMakeLists.txt
cmake_export/tutorial/Console_Workflow/: CMakeLists.txt
cmake_import/: CMakeLists.txt
cmake_import/helloworlds_cpp/: CMakeLists.txt
cmake_import/helloworlds_xml/: CMakeLists.txt  main.cpp
cmake_import/helloworlds_xml/xml/: Resource.xml
cmake_import/helloworlds_xml/xml/source/: HelloWorldPartialClasses.cpp
include/: git_version.h.in
